--- a/djangodashpanel/frontend/package.json
+++ b/djangodashpanel/frontend/package.json
@@ -29,6 +29,7 @@
     "metismenu": "^2.5.0",
     "moment": "^2.18.1",
     "ng2-nouislider": "^1.6.0",
+    "ngx-bootstrap": "^1.6.6",
     "nouislider": "^9.2.0",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
